compiler/test/parse-err/literal-int-from-real.gr
// RUN: graphalg-translate --import-graphalg --verify-diagnostics %s

func LiteralIntFromReal() -> int {
    // expected-error@below{{expected an integer value}}
    return int(42.0);
}
